img will no longer overflow

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -6,6 +6,10 @@ img.responsive {
   width: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 main.container {
   margin: $main-margin;
 }
